# territorio-digital

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  DEPLOY-INSTRUCCIONES.md  DEPLOY.md  DESIGN_SYSTEM.md  FASE-7-ADMIN-PANEL.md  README.md  ROADMAP.md  deploy.sh  docker-compose.yml  nginx.conf  server-setup-complete.sh  setup-server.sh
backend/: .clippy.toml  .env.example  .rustfmt.toml  Cargo.toml  Dockerfile  README.md
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/handlers/: contact.rs  mod.rs
backend/src/models/: contact.rs  mod.rs
backend/src/routes/: mod.rs
backend/src/services/: email.rs
frontend/: .prettierignore  Dockerfile  OG_IMAGES_SPECS.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js
frontend/src/: app.css  app.d.ts  app.html
frontend/src/lib/components/: Analytics.svelte  BreadcrumbSchema.svelte  Button.svelte  Card.svelte  CookieConsent.svelte  Footer.svelte  Header.svelte  Logo.svelte  SEO.svelte  Section.svelte  StructuredData.svelte  index.ts
frontend/src/lib/data/: posts.ts  projects.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/blog/: +page.svelte
frontend/src/routes/contacto/: +page.svelte  +page.ts
frontend/src/routes/portfolio/: +page.svelte
frontend/src/routes/privacidad/: +page.svelte
frontend/src/routes/publicaciones/: +page.svelte
frontend/src/routes/servicios/: +page.svelte
frontend/static/: llms.txt  robots.txt  site.webmanifest
(+14 files in other folders)
