[package]
name = "territorio-digital-api"
version = "0.1.0"
edition = "2021"
authors = ["Francisco Parrão"]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (MongoDB)
mongodb = "3.1"
bson = { version = "2.13", features = ["serde_with"] }

# Email
lettre = "0.11"

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
# Testing
reqwest = { version = "0.12", features = ["json"] }
